update all the things

--- a/package.json
+++ b/package.json
@@ -1,39 +1,92 @@
 {
-  "name": "react-boilerplate",
-  "version": "1.0.0",
-  "main": "index.js",
+  "name": "react-project-starter",
+  "version": "2.0.0",
+  "description": "Opinionated initial configuration for React.js applications",
+  "homepage": "https://github.com/dmrqx/react-project-starter/blob/master/README.md",
+  "bugs": "https://github.com/dmrqx/react-project-starter/issues",
+  "license": "UNLICENSED",
+  "author": "Juliana Demarque <ju.dmrq@gmail.com> (https://demarque.com.br)",
+  "repository": "github:dmrqx/react-project-starter",
   "scripts": {
-    "build": "webpack --config webpack.config.production.js",
-    "dev": "webpack-dev-server --open --config webpack.config.development.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
-  },
-  "keywords": [],
-  "author": "",
-  "license": "ISC",
-  "repository": {
-    "type": "git",
-    "url": "git+https://github.com/dmrqx/react-boilerplate.git"
-  },
-  "bugs": {
-    "url": "https://github.com/dmrqx/react-boilerplate/issues"
-  },
-  "homepage": "https://github.com/dmrqx/react-boilerplate#readme",
-  "description": "",
-  "devDependencies": {
-    "@babel/cli": "^7.2.0",
-    "@babel/core": "^7.2.2",
-    "@babel/preset-env": "^7.2.0",
-    "@babel/preset-react": "^7.0.0",
-    "babel-loader": "^8.0.4",
-    "html-webpack-plugin": "^3.2.0",
-    "webpack": "^4.28.0",
-    "webpack-cli": "^3.1.2",
-    "webpack-dev-server": "^3.1.10",
-    "webpack-merge": "^4.1.5"
+    "start": "webpack-dev-server -d --env development --config webpack.development.js -r @babel/register",
+    "build": "webpack -p --env production --config webpack.production.js -r @babel/register",
+    "format": "prettier-standard",
+    "lint:js": "standardx",
+    "lint:css": "stylelint ./src/**/*.css --fix --config stylelint.config.js",
+    "test": "jest --config jest.config.js --passWithNoTests",
+    "test:watch": "npm run test -- --watch",
+    "test:coverage": "npm run test -- --collectCoverage"
   },
   "dependencies": {
-    "prop-types": "^15.6.2",
-    "react": "^16.6.3",
-    "react-dom": "^16.6.3"
-  }
+    "babel-plugin-react-css-modules": "^5.2.6",
+    "core-js": "^3.6.5",
+    "prop-types": "^15.7.2",
+    "raf": "^3.4.1",
+    "react": "^16.13.1",
+    "react-dom": "^16.13.1"
+  },
+  "devDependencies": {
+    "@babel/core": "^7.10.3",
+    "@babel/plugin-proposal-class-properties": "^7.10.1",
+    "@babel/preset-env": "^7.10.3",
+    "@babel/preset-react": "^7.10.1",
+    "@babel/register": "^7.10.3",
+    "@svgr/webpack": "^5.4.0",
+    "@testing-library/jest-dom": "^5.10.1",
+    "@testing-library/react": "^10.3.0",
+    "@testing-library/react-hooks": "^3.3.0",
+    "autoprefixer": "^9.8.2",
+    "babel-core": "^7.0.0-bridge.0",
+    "babel-eslint": "^10.1.0",
+    "babel-jest": "^26.0.1",
+    "babel-loader": "^8.1.0",
+    "babel-plugin-module-resolver": "^4.0.0",
+    "clean-webpack-plugin": "^3.0.0",
+    "css-loader": "^3.6.0",
+    "eslint": "^7.3.0",
+    "eslint-config-standard": "^14.1.1",
+    "eslint-config-standard-react": "^9.2.0",
+    "eslint-import-resolver-babel-module": "^5.1.2",
+    "eslint-plugin-import": "^2.21.2",
+    "eslint-plugin-jest": "^23.16.0",
+    "eslint-plugin-jest-dom": "^3.0.1",
+    "eslint-plugin-jsx-a11y": "^6.3.1",
+    "eslint-plugin-react": "^7.20.0",
+    "eslint-plugin-react-hooks": "^4.0.4",
+    "eslint-plugin-standard": "^4.0.1",
+    "eslint-plugin-testing-library": "^3.3.1",
+    "extract-css-chunks-webpack-plugin": "^4.7.5",
+    "html-webpack-plugin": "^4.3.0",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.0.1",
+    "jest-environment-jsdom-sixteen": "^1.0.3",
+    "jsdom": "^16.2.2",
+    "postcss-css-variables": "^0.17.0",
+    "postcss-import-url": "^5.1.0",
+    "postcss-loader": "^3.0.0",
+    "postcss-modules": "^2.0.0",
+    "postcss-modules-values": "^3.0.0",
+    "postcss-preset-env": "^6.7.0",
+    "prettier-standard": "^16.3.0",
+    "standard-json": "^1.1.0",
+    "standardx": "^5.0.0",
+    "stylelint": "^13.6.1",
+    "stylelint-config-rational-order": "^0.1.2",
+    "stylelint-config-standard": "^20.0.0",
+    "stylelint-order": "^4.1.0",
+    "url-loader": "^4.1.0",
+    "webpack": "^4.43.0",
+    "webpack-cli": "^3.3.12",
+    "webpack-dev-server": "^3.11.0",
+    "whatwg-fetch": "^3.0.0"
+  },
+  "engines": {
+    "node": "12.17.1",
+    "npm": "6.14.4"
+  },
+  "private": true,
+  "browserslist": [
+    "last 2 version",
+    "> 1%"
+  ]
 }
